--- a/package.json
+++ b/package.json
@@ -9,13 +9,14 @@
   },
   "dependencies": {
     "next": "9.5.0",
+    "next-images": "^1.4.0",
     "react": "16.13.1",
-    "react-dom": "16.13.1",
-    "next-images": "^1.4.1"
+    "react-dom": "16.13.1"
   },
   "devDependencies": {
     "@types/node": "^14.0.27",
     "@types/react": "^16.9.43",
-    "@types/react-dom": "^16.9.8"
+    "@types/react-dom": "^16.9.8",
+    "typescript": "^3.9.7"
   }
 }
