--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@babel/cli": "^7.10.5",
     "axios": "^0.19.2",
     "gray-matter": "^4.0.2",
     "next": "9.5.0",
@@ -19,6 +20,7 @@
     "typeorm": "^0.2.25"
   },
   "devDependencies": {
+    "@babel/plugin-proposal-decorators": "^7.10.5",
     "@types/node": "^14.0.27",
     "@types/react": "^16.9.43",
     "@types/react-dom": "^16.9.8",
